tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__ForestryandMulti-AAAAAAAAAAAAAAAAAAAAEg==__TheMultifarm-AAAAAAAAAAAAAAAAAAACRg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 582,
  "prerequisites": [
    578,
    581
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The smallest farm you can build requires 36 farm blocks (3x4x3 - the largest is 5x4x5 or 100 farm blocks). Place the underlying blocks corresponding to the farm type you built. In this case, Stone Bricks. You can place these blocks beside or under the multi structure, but not the layer above. It will search 6 blocks above these for dirt/farmland/sand/soul sand/humus depending on farm type, with the appropriate crops, saplings, etc. on top of that.\n\nYou can use different modes to collect different crops. Arboretum for trees, infernal for nether wart and so on. You can even mix and match modes on the same farm - cutting trees down for wood in part, and collecting fruit from trees without destroying it in another, for example. So long as they're on different sides, at least.\n\nYou may need to experiment a bit to see what works, but [url]https://ftbwiki.org/MultiFarm#Managed_Farms[/url] has a decent list, though it doesn't specify cotton for managed crop farms for example. It might be a GTNH change, I dunno. A number of crops have an added IC2 crop version as well, so you may prefer those for the higher yield if you level them up. Orchard mode works with Pam's, and Witchery, just to save you some time. Pam's nether crops however don't seem to work at all though.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "The Multifarm",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    578,
    581
  ],
  "rewards": [],
  "tasks": []
}
