tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__ForestryandMulti-AAAAAAAAAAAAAAAAAAAAEg==__ThermionicFabric-AAAAAAAAAAAAAAAAAAACRA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 580,
  "prerequisites": [
    578,
    585
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The thermionic fabricator is used to craft electron tubes and stained glass. It requires redstone flux (RF) energy to run.\n\nIt is your first machine made in the carpenter. Once warmed up, it needs to maintain a certain heat level to operate. The amount of power supplied will determine how much heat will be generated. If you do not supply enough power to maintain the current temperature it will slowly drop. It will continuously draw power, so disconnect it if you don't need it.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Thermionic Fabricator",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    578,
    585
  ],
  "rewards": [],
  "tasks": []
}
