tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__ForestryandMulti-AAAAAAAAAAAAAAAAAAAAEg==__WhyNoThisisNotFi-AAAAAAAAAAAAAAAAAAAIBA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2052,
  "prerequisites": [
    2051
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Taking the biomass from the Fermenter and using it in a still will give you Ethanol. Not really worth it for power, but useful if you want to turn it into ethylene. You could set it up on an old steam setup with nothing better to do to get a more useful power source out of it, or use the Ethanol to power the setup and the forestry farm.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Why No, This is Not Fit For Human Consumption",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2051
  ],
  "rewards": [],
  "tasks": []
}
